--- a/nginx.conf
+++ b/nginx.conf
@@ -3,15 +3,12 @@ server {
     client_max_body_size 128M;
     sendfile off;
 
-    listen 80; ## listen for ipv4
+    listen 8001; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-    server_name yii-basic-blog.com;
+    server_name awss3.tiens.com;
     root        /usr/local/src/yii-aws/web/;
     index       index.php;
-
-    access_log  /usr/local/src/yii-aws/runtime/nginx-access.log;
-    error_log   /usr/local/src/yii-aws/runtime/nginx-error.log;
 
     location / {
         # Redirect everything that isn't a real file to index.php
@@ -21,7 +18,7 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_pass   127.0.0.1:9001;
         #fastcgi_pass unix:/run/php/php7.3-fpm.sock;
         try_files $uri =404;
     }
