--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     client_max_body_size 128M;
     sendfile off;
 
-    listen 8001; ## listen for ipv4
+    listen 80; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
     server_name awss3.tiens.com;
@@ -16,11 +16,12 @@ server {
     }
 
     location ~ \.php$ {
+        try_files $uri /index.php =404;
+        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_pass   127.0.0.1:9001;
         #fastcgi_pass unix:/run/php/php7.3-fpm.sock;
-        try_files $uri =404;
     }
 
     location ~ /\.(ht|svn|git) {
