--- a/nginx.conf
+++ b/nginx.conf
@@ -6,8 +6,8 @@ server {
     listen 80; ## listen for ipv4
     #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-    server_name awss3.tiens.com;
-    root        /usr/local/src/yii-aws/web/;
+    server_name aws2.yiiapp.com;
+    root        /work/d/phpapps/yii-aws2/web/;
     index       index.php;
 
     location / {
@@ -16,12 +16,11 @@ server {
     }
 
     location ~ \.php$ {
-        try_files $uri /index.php =404;
-        fastcgi_pass 127.0.0.1:9000;
-        fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        #fastcgi_pass unix:/run/php/php7.3-fpm.sock;
+        fastcgi_pass   127.0.0.1:9000;
+        #fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
+        try_files $uri =404;
     }
 
     location ~ /\.(ht|svn|git) {
